fix: collection list spacing

--- a/app/src/features/apiClient/screens/apiClient/components/sidebar/collectionsList/collectionsList.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/sidebar/collectionsList/collectionsList.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  padding-top: 8px;
   padding-right: 8px;
   flex: auto;
 
